Kubernetes Ingress ConfigMaps and Secrets/manifests/04-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: k8s-lab
spec:
  replicas: 2
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports: [{ containerPort: 80 }]
          volumeMounts:
            - name: page
              mountPath: /usr/share/nginx/html
      volumes:
        - name: page
          configMap: { name: frontend-page }
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: k8s-lab
spec:
  selector: { app: frontend }
  ports: [{ port: 80, targetPort: 80 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: k8s-lab
spec:
  replicas: 2
  selector:
    matchLabels: { app: api }
  template:
    metadata:
      labels: { app: api }
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports: [{ containerPort: 80 }]
          volumeMounts:
            - name: page
              mountPath: /usr/share/nginx/html
      volumes:
        - name: page
          configMap: { name: api-page }
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: k8s-lab
spec:
  selector: { app: api }
  ports: [{ port: 80, targetPort: 80 }]
